--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -3967,8 +3967,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "82467e96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== TOP N VOLATILE MINUTES ANALYSIS ===\n",
+      "Identifying top 20 most volatile minutes...\n",
+      "\n",
+      "=== TOP 20 MOST VOLATILE MINUTES ===\n",
+      "Total minutes with volatility: 375\n",
+      "Showing top 20 minutes by price standard deviation\n",
+      "\n",
+      "Rank Time     Std Dev    Price Range  Min Price  Max Price  Trades \n",
+      "--------------------------------------------------------------------------------\n",
+      "1    09:16:00 ₹0.7306    ₹2.15        ₹385.60    ₹387.75    94     \n",
+      "2    09:17:00 ₹0.3531    ₹1.00        ₹387.55    ₹388.55    15     \n",
+      "3    14:24:00 ₹0.2965    ₹0.95        ₹385.15    ₹386.10    16     \n",
+      "4    13:02:00 ₹0.2861    ₹0.75        ₹384.65    ₹385.40    14     \n",
+      "5    09:18:00 ₹0.2742    ₹1.00        ₹388.45    ₹389.45    14     \n",
+      "6    09:15:00 ₹0.2694    ₹1.25        ₹385.70    ₹386.95    116    \n",
+      "7    09:20:00 ₹0.2465    ₹0.95        ₹388.90    ₹389.85    13     \n",
+      "8    09:23:00 ₹0.2419    ₹0.75        ₹389.10    ₹389.85    14     \n",
+      "9    09:32:00 ₹0.2281    ₹0.70        ₹389.15    ₹389.85    11     \n",
+      "10   10:36:00 ₹0.2203    ₹0.60        ₹388.00    ₹388.60    20     \n",
+      "11   11:53:00 ₹0.2188    ₹0.55        ₹385.40    ₹385.95    57     \n",
+      "12   13:44:00 ₹0.2175    ₹0.80        ₹384.40    ₹385.20    21     \n",
+      "13   10:04:00 ₹0.2128    ₹0.55        ₹388.35    ₹388.90    17     \n",
+      "14   13:25:00 ₹0.2098    ₹0.55        ₹383.50    ₹384.05    21     \n",
+      "15   11:01:00 ₹0.2043    ₹0.70        ₹387.15    ₹387.85    21     \n",
+      "16   09:29:00 ₹0.2006    ₹0.65        ₹388.35    ₹389.00    13     \n",
+      "17   14:20:00 ₹0.1995    ₹0.50        ₹385.90    ₹386.40    20     \n",
+      "18   10:40:00 ₹0.1981    ₹0.65        ₹387.60    ₹388.25    21     \n",
+      "19   12:09:00 ₹0.1951    ₹0.60        ₹384.75    ₹385.35    72     \n",
+      "20   14:55:00 ₹0.1923    ₹0.65        ₹386.35    ₹387.00    14     \n",
+      "\n",
+      "=== DETAILED ANALYSIS OF TOP 20 VOLATILE MINUTES ===\n",
+      "\n",
+      "--- TIME DISTRIBUTION ---\n",
+      "Hourly distribution of top volatile minutes:\n",
+      "  09:00-09:59: 8 minutes\n",
+      "  10:00-10:59: 3 minutes\n",
+      "  11:00-11:59: 2 minutes\n",
+      "  12:00-12:59: 1 minutes\n",
+      "  13:00-13:59: 3 minutes\n",
+      "  14:00-14:59: 3 minutes\n",
+      "\n",
+      "--- VOLATILITY MAGNITUDE ANALYSIS ---\n",
+      "Highest volatility: ₹0.7306\n",
+      "Lowest volatility (in top 20): ₹0.1923\n",
+      "Average volatility (top 20): ₹0.2598\n",
+      "Median volatility (top 20): ₹0.2195\n",
+      "\n",
+      "--- PRICE RANGE ANALYSIS ---\n",
+      "Largest price range: ₹2.15\n",
+      "Smallest price range (in top 20): ₹0.50\n",
+      "Average price range (top 20): ₹0.82\n",
+      "\n",
+      "--- TRADE COUNT ANALYSIS ---\n",
+      "Most trades in volatile minute: 116\n",
+      "Least trades in volatile minute: 11\n",
+      "Average trades in volatile minutes: 30.2\n",
+      "\n",
+      "--- EXTREME VOLATILITY PERIODS ---\n",
+      "Extreme volatility minutes (top 10%): 2\n",
+      "  09:16:00: ₹0.7306 std dev, ₹2.15 range\n",
+      "  09:17:00: ₹0.3531 std dev, ₹1.00 range\n",
+      "\n",
+      "--- COMPARISON WITH OVERALL STATISTICS ---\n",
+      "Overall day volatility: ₹1.5743\n",
+      "Overall day price range: ₹6.70\n",
+      "Top 20 volatility vs overall: 0.17x higher\n",
+      "Top 20 price range vs overall: 0.12x higher\n",
+      "\n",
+      "=== EXPORT DATA ===\n",
+      "Top volatile minutes data is available in 'top_volatile_minutes' DataFrame\n",
+      "You can export this data or use it for further analysis\n",
+      "\n",
+      "=== SUMMARY TABLE ===\n",
+      "         Metric               Value\n",
+      "          Count                  20\n",
+      "    Avg Std Dev             ₹0.2598\n",
+      "Avg Price Range               ₹0.82\n",
+      "     Avg Trades                30.2\n",
+      "     Time Range 09:15:00 - 14:55:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identify top N volatile minutes in the day\n",
+    "print(\"=== TOP N VOLATILE MINUTES ANALYSIS ===\")\n",
+    "\n",
+    "# Set N for top volatile minutes (you can change this value)\n",
+    "N = 20  # Change this to see top 10, 15, 25, etc.\n",
+    "\n",
+    "print(f\"Identifying top {N} most volatile minutes...\")\n",
+    "\n",
+    "# Calculate minute-by-minute volatility (if not already calculated)\n",
+    "if 'minute_key' not in df.columns:\n",
+    "    df['minute_key'] = df['date'].dt.floor('1min')\n",
+    "\n",
+    "minute_volatility = df.groupby('minute_key').agg({\n",
+    "    'price': ['mean', 'std', 'min', 'max', 'count']\n",
+    "}).round(4)\n",
+    "\n",
+    "# Flatten column names\n",
+    "minute_volatility.columns = ['avg_price', 'price_std', 'min_price', 'max_price', 'trade_count']\n",
+    "minute_volatility = minute_volatility.reset_index()\n",
+    "minute_volatility['time'] = minute_volatility['minute_key'].dt.time\n",
+    "\n",
+    "# Filter out minutes with only 1 trade (no meaningful volatility)\n",
+    "minute_volatility_filtered = minute_volatility[minute_volatility['trade_count'] > 1].copy()\n",
+    "\n",
+    "# Sort by volatility (price_std) in descending order\n",
+    "top_volatile_minutes = minute_volatility_filtered.nlargest(N, 'price_std').copy()\n",
+    "\n",
+    "# Add additional metrics\n",
+    "top_volatile_minutes['price_range'] = top_volatile_minutes['max_price'] - top_volatile_minutes['min_price']\n",
+    "top_volatile_minutes['volatility_rank'] = range(1, len(top_volatile_minutes) + 1)\n",
+    "\n",
+    "print(f\"\\n=== TOP {N} MOST VOLATILE MINUTES ===\")\n",
+    "print(f\"Total minutes with volatility: {len(minute_volatility_filtered)}\")\n",
+    "print(f\"Showing top {N} minutes by price standard deviation\")\n",
+    "\n",
+    "# Display the top N volatile minutes\n",
+    "print(f\"\\n{'Rank':<4} {'Time':<8} {'Std Dev':<10} {'Price Range':<12} {'Min Price':<10} {'Max Price':<10} {'Trades':<7}\")\n",
+    "print(\"-\" * 80)\n",
+    "\n",
+    "for idx, row in top_volatile_minutes.iterrows():\n",
+    "    print(f\"{row['volatility_rank']:<4} {str(row['time']):<8} ₹{row['price_std']:<9.4f} ₹{row['price_range']:<11.2f} ₹{row['min_price']:<9.2f} ₹{row['max_price']:<9.2f} {row['trade_count']:<7}\")\n",
+    "\n",
+    "# Detailed analysis of top volatile minutes\n",
+    "print(f\"\\n=== DETAILED ANALYSIS OF TOP {N} VOLATILE MINUTES ===\")\n",
+    "\n",
+    "# 1. Time distribution analysis\n",
+    "print(\"\\n--- TIME DISTRIBUTION ---\")\n",
+    "top_volatile_minutes['hour'] = top_volatile_minutes['time'].apply(lambda x: x.hour)\n",
+    "hourly_distribution = top_volatile_minutes['hour'].value_counts().sort_index()\n",
+    "\n",
+    "print(\"Hourly distribution of top volatile minutes:\")\n",
+    "for hour, count in hourly_distribution.items():\n",
+    "    print(f\"  {hour:02d}:00-{hour:02d}:59: {count} minutes\")\n",
+    "\n",
+    "# 2. Volatility magnitude analysis\n",
+    "print(f\"\\n--- VOLATILITY MAGNITUDE ANALYSIS ---\")\n",
+    "print(f\"Highest volatility: ₹{top_volatile_minutes['price_std'].max():.4f}\")\n",
+    "print(f\"Lowest volatility (in top {N}): ₹{top_volatile_minutes['price_std'].min():.4f}\")\n",
+    "print(f\"Average volatility (top {N}): ₹{top_volatile_minutes['price_std'].mean():.4f}\")\n",
+    "print(f\"Median volatility (top {N}): ₹{top_volatile_minutes['price_std'].median():.4f}\")\n",
+    "\n",
+    "# 3. Price range analysis\n",
+    "print(f\"\\n--- PRICE RANGE ANALYSIS ---\")\n",
+    "print(f\"Largest price range: ₹{top_volatile_minutes['price_range'].max():.2f}\")\n",
+    "print(f\"Smallest price range (in top {N}): ₹{top_volatile_minutes['price_range'].min():.2f}\")\n",
+    "print(f\"Average price range (top {N}): ₹{top_volatile_minutes['price_range'].mean():.2f}\")\n",
+    "\n",
+    "# 4. Trade count analysis\n",
+    "print(f\"\\n--- TRADE COUNT ANALYSIS ---\")\n",
+    "print(f\"Most trades in volatile minute: {top_volatile_minutes['trade_count'].max()}\")\n",
+    "print(f\"Least trades in volatile minute: {top_volatile_minutes['trade_count'].min()}\")\n",
+    "print(f\"Average trades in volatile minutes: {top_volatile_minutes['trade_count'].mean():.1f}\")\n",
+    "\n",
+    "# 5. Extreme volatility periods\n",
+    "print(f\"\\n--- EXTREME VOLATILITY PERIODS ---\")\n",
+    "extreme_volatility = top_volatile_minutes[top_volatile_minutes['price_std'] > top_volatile_minutes['price_std'].quantile(0.9)]\n",
+    "print(f\"Extreme volatility minutes (top 10%): {len(extreme_volatility)}\")\n",
+    "for idx, row in extreme_volatility.iterrows():\n",
+    "    print(f\"  {row['time']}: ₹{row['price_std']:.4f} std dev, ₹{row['price_range']:.2f} range\")\n",
+    "\n",
+    "# 6. Comparison with overall statistics\n",
+    "print(f\"\\n--- COMPARISON WITH OVERALL STATISTICS ---\")\n",
+    "overall_std = df['price'].std()\n",
+    "overall_range = df['price'].max() - df['price'].min()\n",
+    "\n",
+    "print(f\"Overall day volatility: ₹{overall_std:.4f}\")\n",
+    "print(f\"Overall day price range: ₹{overall_range:.2f}\")\n",
+    "print(f\"Top {N} volatility vs overall: {top_volatile_minutes['price_std'].mean()/overall_std:.2f}x higher\")\n",
+    "print(f\"Top {N} price range vs overall: {top_volatile_minutes['price_range'].mean()/overall_range:.2f}x higher\")\n",
+    "\n",
+    "# 7. Export top volatile minutes data\n",
+    "print(f\"\\n=== EXPORT DATA ===\")\n",
+    "print(\"Top volatile minutes data is available in 'top_volatile_minutes' DataFrame\")\n",
+    "print(\"You can export this data or use it for further analysis\")\n",
+    "\n",
+    "# Display summary table\n",
+    "print(f\"\\n=== SUMMARY TABLE ===\")\n",
+    "summary_stats = {\n",
+    "    'Metric': ['Count', 'Avg Std Dev', 'Avg Price Range', 'Avg Trades', 'Time Range'],\n",
+    "    'Value': [\n",
+    "        len(top_volatile_minutes),\n",
+    "        f\"₹{top_volatile_minutes['price_std'].mean():.4f}\",\n",
+    "        f\"₹{top_volatile_minutes['price_range'].mean():.2f}\",\n",
+    "        f\"{top_volatile_minutes['trade_count'].mean():.1f}\",\n",
+    "        f\"{top_volatile_minutes['time'].min()} - {top_volatile_minutes['time'].max()}\"\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "summary_df = pd.DataFrame(summary_stats)\n",
+    "print(summary_df.to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e6dcaf4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76b0a01e",
    "metadata": {},
    "outputs": [],
    "source": []
