Trade Size Classification

--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -4172,11 +4172,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "8e6dcaf4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== TRADE SIZE ANALYSIS ===\n",
+      "Calculating trade size metrics...\n",
+      "=== BASIC TRADE SIZE STATISTICS ===\n",
+      "Average trade size: 1,051\n",
+      "Median trade size: 200\n",
+      "Minimum trade size: 1\n",
+      "Maximum trade size: 153,858\n",
+      "Standard deviation: 3,358\n",
+      "\n",
+      "=== TRADE SIZE PERCENTILES ===\n",
+      "10th percentile: 4\n",
+      "25th percentile: 26\n",
+      "50th percentile: 200\n",
+      "75th percentile: 799\n",
+      "90th percentile: 2,440\n",
+      "95th percentile: 4,485\n",
+      "99th percentile: 13,820\n",
+      "\n",
+      "=== TRADE SIZE CATEGORIES ===\n",
+      "Trade size distribution:\n",
+      "  Small (≤100): 4,440 trades (40.53%)\n",
+      "  Medium (101-500): 2,757 trades (25.16%)\n",
+      "  Very Large (1001-5000): 1,855 trades (16.93%)\n",
+      "  Large (501-1000): 1,408 trades (12.85%)\n",
+      "  Huge (>5000): 496 trades (4.53%)\n",
+      "\n",
+      "=== VOLUME-WEIGHTED METRICS ===\n",
+      "Volume-weighted average trade size: 11,780\n",
+      "Simple average vs volume-weighted: 1,051 vs 11,780\n",
+      "Difference: 10,729\n",
+      "\n",
+      "=== TRADE SIZE BY TIME OF DAY ===\n",
+      "Hourly trade size analysis:\n",
+      "  09:00-09:59: Avg=2,067, Median=424, Count=1,047.0\n",
+      "  10:00-10:59: Avg=973, Median=180, Count=1,476.0\n",
+      "  11:00-11:59: Avg=811, Median=115, Count=1,653.0\n",
+      "  12:00-12:59: Avg=810, Median=202, Count=1,807.0\n",
+      "  13:00-13:59: Avg=851, Median=196, Count=1,679.0\n",
+      "  14:00-14:59: Avg=1,305, Median=230, Count=1,521.0\n",
+      "  15:00-15:59: Avg=955, Median=173, Count=1,773.0\n",
+      "\n",
+      "Hour with largest average trade size: 09:00 (2,067)\n",
+      "Hour with smallest average trade size: 12:00 (810)\n",
+      "\n",
+      "=== OUTLIER ANALYSIS ===\n",
+      "Outlier threshold (IQR method):\n",
+      "  Lower bound: -1,134\n",
+      "  Upper bound: 1,958\n",
+      "  Outlier trades: 1,337 (12.20%)\n",
+      "  Normal trades: 9,619 (87.80%)\n",
+      "\n",
+      "Outlier trade sizes:\n",
+      "  Largest outlier: 153,858\n",
+      "  Smallest outlier: 1,962\n",
+      "  Average outlier size: 6,191\n",
+      "\n",
+      "=== SUMMARY ===\n",
+      "Total trades analyzed: 10,956\n",
+      "Total volume traded: 11,510,171\n",
+      "Average trade size: 1,051\n",
+      "Most common trade size category: Small (≤100)\n",
+      "Trade size coefficient of variation: 319.6%\n",
+      "\n",
+      "=== SAMPLE TRADES BY SIZE ===\n",
+      "Small trades sample:\n",
+      "                  date   price  qty     trnvr\n",
+      "45 2025-08-07 09:15:23  386.45   71  27437.95\n",
+      "46 2025-08-07 09:15:23  386.30   65  25109.50\n",
+      "47 2025-08-07 09:15:24  386.45   26  10047.70\n",
+      "\n",
+      "Large trades sample:\n",
+      "                 date   price    qty        trnvr\n",
+      "0 2025-08-07 09:15:00  386.85  65740  25431519.00\n",
+      "2 2025-08-07 09:15:01  386.75   1401    541836.75\n",
+      "3 2025-08-07 09:15:02  386.80   1795    694306.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Measure average trade size and related volume metrics\n",
+    "print(\"=== TRADE SIZE ANALYSIS ===\")\n",
+    "\n",
+    "# Calculate basic trade size statistics\n",
+    "print(\"Calculating trade size metrics...\")\n",
+    "\n",
+    "# Basic statistics\n",
+    "avg_trade_size = df['qty'].mean()\n",
+    "median_trade_size = df['qty'].median()\n",
+    "min_trade_size = df['qty'].min()\n",
+    "max_trade_size = df['qty'].max()\n",
+    "std_trade_size = df['qty'].std()\n",
+    "\n",
+    "print(f\"=== BASIC TRADE SIZE STATISTICS ===\")\n",
+    "print(f\"Average trade size: {avg_trade_size:,.0f}\")\n",
+    "print(f\"Median trade size: {median_trade_size:,.0f}\")\n",
+    "print(f\"Minimum trade size: {min_trade_size:,}\")\n",
+    "print(f\"Maximum trade size: {max_trade_size:,}\")\n",
+    "print(f\"Standard deviation: {std_trade_size:,.0f}\")\n",
+    "\n",
+    "# Calculate percentiles for trade size distribution\n",
+    "print(f\"\\n=== TRADE SIZE PERCENTILES ===\")\n",
+    "trade_size_percentiles = df['qty'].quantile([0.1, 0.25, 0.5, 0.75, 0.9, 0.95, 0.99])\n",
+    "for p, v in trade_size_percentiles.items():\n",
+    "    print(f\"{p*100:2.0f}th percentile: {v:,.0f}\")\n",
+    "\n",
+    "# Trade size categories analysis\n",
+    "print(f\"\\n=== TRADE SIZE CATEGORIES ===\")\n",
+    "\n",
+    "# Define trade size categories\n",
+    "def categorize_trade_size(qty):\n",
+    "    if qty <= 100:\n",
+    "        return 'Small (≤100)'\n",
+    "    elif qty <= 500:\n",
+    "        return 'Medium (101-500)'\n",
+    "    elif qty <= 1000:\n",
+    "        return 'Large (501-1000)'\n",
+    "    elif qty <= 5000:\n",
+    "        return 'Very Large (1001-5000)'\n",
+    "    else:\n",
+    "        return 'Huge (>5000)'\n",
+    "\n",
+    "# Apply categorization\n",
+    "df['trade_size_category'] = df['qty'].apply(categorize_trade_size)\n",
+    "\n",
+    "# Count trades in each category\n",
+    "size_category_counts = df['trade_size_category'].value_counts()\n",
+    "size_category_percentages = (size_category_counts / len(df) * 100).round(2)\n",
+    "\n",
+    "print(\"Trade size distribution:\")\n",
+    "for category, count in size_category_counts.items():\n",
+    "    percentage = size_category_percentages[category]\n",
+    "    print(f\"  {category}: {count:,} trades ({percentage}%)\")\n",
+    "\n",
+    "# Volume-weighted average trade size\n",
+    "print(f\"\\n=== VOLUME-WEIGHTED METRICS ===\")\n",
+    "volume_weighted_avg = (df['qty'] * df['qty']).sum() / df['qty'].sum()\n",
+    "print(f\"Volume-weighted average trade size: {volume_weighted_avg:,.0f}\")\n",
+    "\n",
+    "# Compare with simple average\n",
+    "print(f\"Simple average vs volume-weighted: {avg_trade_size:,.0f} vs {volume_weighted_avg:,.0f}\")\n",
+    "print(f\"Difference: {volume_weighted_avg - avg_trade_size:,.0f}\")\n",
+    "\n",
+    "# Trade size by time of day\n",
+    "print(f\"\\n=== TRADE SIZE BY TIME OF DAY ===\")\n",
+    "df['hour'] = df['date'].dt.hour\n",
+    "hourly_trade_sizes = df.groupby('hour')['qty'].agg(['mean', 'median', 'count']).round(0)\n",
+    "hourly_trade_sizes.columns = ['Avg Trade Size', 'Median Trade Size', 'Trade Count']\n",
+    "\n",
+    "print(\"Hourly trade size analysis:\")\n",
+    "for hour, row in hourly_trade_sizes.iterrows():\n",
+    "    print(f\"  {hour:02d}:00-{hour:02d}:59: Avg={row['Avg Trade Size']:,.0f}, Median={row['Median Trade Size']:,.0f}, Count={row['Trade Count']:,}\")\n",
+    "\n",
+    "# Find hours with largest and smallest average trade sizes\n",
+    "max_avg_hour = hourly_trade_sizes['Avg Trade Size'].idxmax()\n",
+    "min_avg_hour = hourly_trade_sizes['Avg Trade Size'].idxmin()\n",
+    "\n",
+    "print(f\"\\nHour with largest average trade size: {max_avg_hour:02d}:00 ({hourly_trade_sizes.loc[max_avg_hour, 'Avg Trade Size']:,.0f})\")\n",
+    "print(f\"Hour with smallest average trade size: {min_avg_hour:02d}:00 ({hourly_trade_sizes.loc[min_avg_hour, 'Avg Trade Size']:,.0f})\")\n",
+    "\n",
+    "# Trade size outliers analysis\n",
+    "print(f\"\\n=== OUTLIER ANALYSIS ===\")\n",
+    "\n",
+    "# Define outliers using IQR method\n",
+    "Q1 = df['qty'].quantile(0.25)\n",
+    "Q3 = df['qty'].quantile(0.75)\n",
+    "IQR = Q3 - Q1\n",
+    "lower_bound = Q1 - 1.5 * IQR\n",
+    "upper_bound = Q3 + 1.5 * IQR\n",
+    "\n",
+    "outliers = df[(df['qty'] < lower_bound) | (df['qty'] > upper_bound)]\n",
+    "normal_trades = df[(df['qty'] >= lower_bound) & (df['qty'] <= upper_bound)]\n",
+    "\n",
+    "print(f\"Outlier threshold (IQR method):\")\n",
+    "print(f\"  Lower bound: {lower_bound:,.0f}\")\n",
+    "print(f\"  Upper bound: {upper_bound:,.0f}\")\n",
+    "print(f\"  Outlier trades: {len(outliers):,} ({(len(outliers)/len(df)*100):.2f}%)\")\n",
+    "print(f\"  Normal trades: {len(normal_trades):,} ({(len(normal_trades)/len(df)*100):.2f}%)\")\n",
+    "\n",
+    "if len(outliers) > 0:\n",
+    "    print(f\"\\nOutlier trade sizes:\")\n",
+    "    print(f\"  Largest outlier: {outliers['qty'].max():,}\")\n",
+    "    print(f\"  Smallest outlier: {outliers['qty'].min():,}\")\n",
+    "    print(f\"  Average outlier size: {outliers['qty'].mean():,.0f}\")\n",
+    "\n",
+    "# Summary statistics\n",
+    "print(f\"\\n=== SUMMARY ===\")\n",
+    "print(f\"Total trades analyzed: {len(df):,}\")\n",
+    "print(f\"Total volume traded: {df['qty'].sum():,}\")\n",
+    "print(f\"Average trade size: {avg_trade_size:,.0f}\")\n",
+    "print(f\"Most common trade size category: {size_category_counts.index[0]}\")\n",
+    "print(f\"Trade size coefficient of variation: {(std_trade_size/avg_trade_size*100):.1f}%\")\n",
+    "\n",
+    "# Display sample of different trade sizes\n",
+    "print(f\"\\n=== SAMPLE TRADES BY SIZE ===\")\n",
+    "print(\"Small trades sample:\")\n",
+    "small_trades = df[df['qty'] <= 100][['date', 'price', 'qty', 'trnvr']].head(3)\n",
+    "print(small_trades)\n",
+    "\n",
+    "print(\"\\nLarge trades sample:\")\n",
+    "large_trades = df[df['qty'] > 1000][['date', 'price', 'qty', 'trnvr']].head(3)\n",
+    "print(large_trades)"
+   ]
   },
   {
    "cell_type": "code",
